Escenarios 1.1., 1.2. y 1.3. en Jupyter Notebooks

--- a/jupyter/Escenario 1-1.ipynb
+++ b/jupyter/Escenario 1-1.ipynb
@@ -22,22 +22,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5db3da4d-a7cc-4d70-bd93-fca30d520593",
+   "execution_count": 3,
+   "id": "6a91d05c-b5c4-4d70-82dd-b2351632e4a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import Model, load_model\n",
+    "from tensorflow.keras.layers import Input, Dense, Concatenate\n",
+    "from tensorflow.keras.regularizers import l2\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.losses import BinaryCrossentropy\n",
     "\n",
     "from data_utils import generar_mensajes\n",
-    "from models11 import crear_modelo_alice, crear_modelo_bob\n",
     "\n",
     "import numpy as np\n",
     "import time as t\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from IPython.display import clear_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f3e7b67-9064-4c3b-b768-6a14a5fb1a69",
+   "metadata": {},
+   "source": [
+    "## Las redes neuronales\n",
+    "\n",
+    "En esta sección definimos las redes a utilizar más adelante."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d51d6d83-c870-4c6b-93b4-2c652a19b3a7",
+   "metadata": {},
+   "source": [
+    "**Alice**: Red neuronal que cifra los mensajes.\n",
+    "1. Recibe como parámetro el número de bits de los mensajes que va a cifrar y entonces define la forma de entrada.\n",
+    "2. Se le asigna tanto a x, para manipular los datos desde la entrada, como a final_input, ya que va a tener la misma forma.\n",
+    "3. Va a tener dos capas, con 128 y 64 neuronas, que reciben la entrada de la anterior y usan la función de activación relu. _Dense_ quiere decir que la capa está completamente conectada con la anterior.\n",
+    "\n",
+    "La última capa tiene una función de activación lineal porque luego la va a procesar Bob. No es necesario que sea binaria todavía. Tiene también tantas neuronas como bits, porque se busca que saque el mensaje cifrado y, por último, la función kernel_regularizer ayuda a evitar el sobreajuste penalizando las capas, de forma a que afecta la función de pérdida/coste."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fedee013-7edd-4563-bce5-a3c4165b70af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crear_modelo_alice(bits):\n",
+    "    input_msg = Input(shape=(bits,), name='mensaje_original')\n",
+    "    \n",
+    "    x = input_msg\n",
+    "    final_input = input_msg\n",
+    "\n",
+    "    x = Dense(128, activation='relu')(x)\n",
+    "    x = Dense(64, activation='relu')(x)\n",
+    "\n",
+    "    cifrado = Dense(bits, activation='linear', kernel_regularizer=l2(0.01))(x)\n",
+    "    return Model(final_input, cifrado, name='Alice')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eb152bc-8398-48c2-8408-02c0295c19ba",
+   "metadata": {},
+   "source": [
+    "**Bob**: Red neuronal que descifra los mensajes.\n",
+    "Funciona parecido a Alice, salvo que tiene capas de 64 y 64 neuronas. \n",
+    "Lo más destacable es que la función de activación de la última capa es, en este caso, la función sigmoide. La función sigmoide devuelve un valor entre 0 y 1 y esos son los valores que luego se procesan para inferir si la predicción es el valor 0 o el valor 1 en la reconstrucción."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a691d9fc-f129-4d3f-8342-d33fa27eae24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crear_modelo_bob(bits):\n",
+    "    input_cifrado = Input(shape=(bits,), name='mensaje_cifrado')\n",
+    "\n",
+    "    x = input_cifrado\n",
+    "    final_input = input_cifrado\n",
+    "    \n",
+    "    \n",
+    "    x = Dense(64, activation='relu')(x)\n",
+    "    x = Dense(64, activation='relu')(x)\n",
+    "\n",
+    "    reconstruido = Dense(bits, activation='sigmoid')(x)\n",
+    "    return Model(final_input, reconstruido, name='Bob')"
    ]
   },
   {
@@ -49,13 +126,15 @@
     "\n",
     "Esta sección se encarga de entrenar los modelos de Alice y Bob. Tiene tres métodos:\n",
     "* El método crear_modelo_conjunto, que crea el modelo a entrenar de forma conjunta. El por qué se verá en el escenario 1.3.\n",
-    "* El método entrenar_modelo, que entrena es emodelo conjunto.\n",
-    "* El método principal entrenar, que utiliza los método anteriores para instanciar las redes neuronales, entrenarlas y guardar los modelos, lo cuál es vital para luego poder utilizarlos en la evaluación."
+    "* El método entrenar_modelo, que entrena ese modelo conjunto.\n",
+    "* El método principal entrenar, que utiliza los método anteriores para instanciar las redes neuronales, entrenarlas y guardar los modelos, lo cuál es vital para luego poder utilizarlos en la evaluación.\n",
+    "\n",
+    "Nótese que se recoge la duración del entrenamiento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bdf62561-3984-409a-8957-3631d13b5348",
    "metadata": {},
    "outputs": [],
@@ -64,18 +143,23 @@
     "    alice = crear_modelo_alice(bits)\n",
     "    bob = crear_modelo_bob(bits)\n",
     "\n",
-    "    return alice, bob"
+    "    # Modelo combinado sin clave\n",
+    "    modelo = Model(alice.input, bob(alice.output))\n",
+    "\n",
+    "    return alice, bob, modelo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c6f4d777-ab53-4846-8de7-236e1a1b142d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def entrenar_modelo(modelo, n_mensajes, epochs, mensajes, batch_size):\n",
     "    for epoch in range(epochs):\n",
+    "        if epoch % 100 == 0:\n",
+    "            clear_output(wait=True)\n",
     "\n",
     "        # Se selecciona un lote aleatorio de mensajes, que es lo que va en mensajes_batch para evitar overfitting\n",
     "        idx = np.random.choice(n_mensajes, batch_size)\n",
@@ -92,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7aacbd1f-4471-4ea7-94ce-4f17d7aedb29",
    "metadata": {},
    "outputs": [],
@@ -101,17 +185,11 @@
     "    # Generamos los mensajes\n",
     "    mensajes = generar_mensajes(n_mensajes, bits)\n",
     "\n",
-    "    # Instanciamos los modelos\n",
-    "    alice, bob = crear_modelo_conjunto(bits)\n",
-    "    \n",
-    "    # Modelo combinado sin clave\n",
-    "    modelo = Model(alice.input, bob(alice.output))\n",
+    "    # Instanciamos los modelos y obtenemos el combinado\n",
+    "    alice, bob, modelo = crear_modelo_conjunto(bits)\n",
     "\n",
     "    # Se prepara el modelo para entrenarlo con Adam y BinaryCrossEntropy\n",
-    "    # Adam = algoritmo que calcula y actualiza los pesos, con 0.001 como un ratio estándar\n",
-    "    # BinaryCrossEntropy = función que mide el error de la estimación\n",
     "    modelo.compile(optimizer=Adam(adam_optimizer), loss=BinaryCrossentropy())\n",
-    "    \n",
     "    \n",
     "    time_0 = t.time()\n",
     "    \n",
@@ -135,16 +213,16 @@
     "## Código de evaluación\n",
     "\n",
     "Esta sección se encarga de evaluar el entrenamiento y consiste también en tres métodos:\n",
-    "* El método cargar_modelos, que crea a Alice y a Bob y les carga los pesos finale sobtenidos en el entrenamiento.\n",
+    "* El método cargar_modelos, que crea a Alice y a Bob y les carga los pesos finales obtenidos en el entrenamiento.\n",
     "* El método analizar_resultados, que recoge una serie de métricas: la precisión media, la distancia de Hamming media y el número de reconstrucciones perfectas obtenido.\n",
-    "* El método evaluar, que usa los anteriores para llevar a cabo la evaluación.\n",
+    "* El método evaluar, que usa los anteriores para llevar a cabo la evaluación. Este método devuelve las métricas que luego se enviarán al método que dibuja las gráficas.\n",
     "\n",
     "Nótese que también se incluye el escribir en un fichero de texto los resultados. Así se pueden consultar los resultados exactos más fácilmente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "8f8b00ea-2b56-4fe7-905c-84a31d5b4c28",
    "metadata": {},
    "outputs": [],
@@ -161,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "c96d2fc1-6cc7-4df5-a94b-e64c7096a66f",
    "metadata": {},
    "outputs": [],
@@ -202,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "cdf73ec6-7fbd-44f0-8620-f7623a00eb3a",
    "metadata": {},
    "outputs": [],
@@ -215,7 +293,7 @@
     "    # Generamos los mensajes\n",
     "    mensajes = generar_mensajes(n_mensajes, bits)\n",
     "    \n",
-    "    # Se cogen los mensajes y se generan las claves para tener suficientes\n",
+    "    # Se cifran y descifran los mensajes\n",
     "    cifrados = alice.predict(mensajes)\n",
     "    reconstruidos = bob.predict(cifrados)\n",
     "\n",
@@ -242,14 +320,14 @@
    "id": "3cb8df37-5d8b-471c-bd9c-1d26754355de",
    "metadata": {},
    "source": [
-    "## Graficando el código\n",
+    "## Representando los resultados\n",
     "\n",
-    "Tan importante como desarrollar un buen código, es poder enseñar los resultados de maner ailustrativa. Para ello, en esta sección se define la creación de una gráfica para poder visualizar los resultados obtenidos en la ejecución."
+    "Tan importante como desarrollar un buen código, es poder enseñar los resultados de manera ilustrativa. Para ello, en esta sección se define la creación de una gráfica para poder visualizar los resultados obtenidos en la ejecución. Las métricas se recogen en el main y se guardan en un diccionario. Así mismo, también recibe el nombre de la figura, al que simplemente se le añade el formato al guardarla y el número de mensajes, que es útil para establecer un límite en la gráfica que muestra las reconstrucciones perfectas realizadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "b4c8da03-1365-4ea4-a826-2726ede271c5",
    "metadata": {},
    "outputs": [],
@@ -307,9 +385,11 @@
     "\n",
     "Aquí se define el código principal. Este es un main que tiene un bucle que ejecuta el código una vez. Con ayuda de bucles se puede conseguir que se ejecute más veces, y es lo que se hizo para obtener los resultados más cómodamente, pero en este caso, en pro de visualizar la gráfica resultante, se ha dejado una sola  ejecución.\n",
     "\n",
-    "Aquí es donde se definen los hiperparámetros que se utilizarán, coo el tamaño del _batch_.\n",
+    "Aquí es donde se definen los hiperparámetros que se utilizarán, como el tamaño del _batch_.\n",
     "\n",
-    "La ejecución tarda en completarse, puede llegar a una hora. Por ello, se han dejado los mensajes que Tensorflow y Keras imprimen por pantalla y se ha añadido uno, que sale en cada ronda de entrenamiento y da información acerca de por dónde y cómo va. Hay mucha salida, pero cuando la ejecución termina, la celda limita su tamaño y la imagen resultante queda al final."
+    "La ejecución tarda en completarse, puede llegar a una hora. Por ello, se han dejado los mensajes que Tensorflow y Keras imprimen por pantalla y se ha añadido uno, que sale en cada ronda de entrenamiento y da información acerca de por dónde y cómo va. Hay mucha salida, pero el tamaño queda limitado.\n",
+    "\n",
+    "Además, aquí se recogen las métricas que se usan para dibujar las gráficas, los métodos de entrenamiento y evaluación devuelven el tiempo que duró el entrenamiento y las métricas recogidas durante la evaluación."
    ]
   },
   {
@@ -380,6 +460,16 @@
     "            f.write(f\"Tiempo total de ejecución (s): {tiempo_total}\\n\\n\")\n",
     "        \n",
     "        draw_graph(diccionario_medidas, n_mensajes, nombre_figura)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f6b9516-c623-4006-a09e-059486d0fa37",
+   "metadata": {},
+   "source": [
+    "El resultado de la ejecución aparecerá encima de este texto y producirá una imagen al finalizar la ejecución con todos los resultados. Además, la imagen generada con las gráficas también queda guardada en el directorio de esta Jupyter Notebook.\n",
+    "\n",
+    "Se anima a jugar con los parámetros, como el tamaño del _batch_, las _epochs_, el _adam optimizer_... para probar el rendimiento en distintos casos."
    ]
   }
  ],
