El resto de Notebooks jutno a algún arreglillo

--- a/jupyter/Escenario 1-1.ipynb
+++ b/jupyter/Escenario 1-1.ipynb
@@ -383,11 +383,11 @@
    "source": [
     "## Código principal\n",
     "\n",
-    "Aquí se define el código principal. Este es un main que tiene un bucle que ejecuta el código una vez. Con ayuda de bucles se puede conseguir que se ejecute más veces, y es lo que se hizo para obtener los resultados más cómodamente, pero en este caso, en pro de visualizar la gráfica resultante, se ha dejado una sola  ejecución.\n",
+    "Aquí se define el código principal. Este es un main que tiene un bucle que ejecuta el código una vez. Con ayuda de bucles se puede conseguir que se ejecute más veces, y es lo que se hizo para obtener los resultados más cómodamente, pero en este caso, en pos de visualizar la gráfica resultante, se ha dejado una sola ejecución.\n",
     "\n",
     "Aquí es donde se definen los hiperparámetros que se utilizarán, como el tamaño del _batch_.\n",
     "\n",
-    "La ejecución tarda en completarse, puede llegar a una hora. Por ello, se han dejado los mensajes que Tensorflow y Keras imprimen por pantalla y se ha añadido uno, que sale en cada ronda de entrenamiento y da información acerca de por dónde y cómo va. Hay mucha salida, pero el tamaño queda limitado.\n",
+    "La ejecución tarda en completarse, puede llegar a una hora. Por ello, se han dejado los mensajes que Tensorflow y Keras imprimen por pantalla y se ha añadido uno, que sale en cada ronda de entrenamiento y da información acerca de por dónde y cómo va.\n",
     "\n",
     "Además, aquí se recogen las métricas que se usan para dibujar las gráficas, los métodos de entrenamiento y evaluación devuelven el tiempo que duró el entrenamiento y las métricas recogidas durante la evaluación."
    ]
