--- a/jupyter/Escenario 1-2.ipynb
+++ b/jupyter/Escenario 1-2.ipynb
@@ -476,7 +476,7 @@
     "\n",
     "Aquí es donde se definen los hiperparámetros que se utilizarán, como el tamaño del _batch_.\n",
     "\n",
-    "La ejecución tarda en completarse, puede llegar a una hora. Por ello, se han dejado los mensajes que Tensorflow y Keras imprimen por pantalla y se ha añadido uno, que sale en cada ronda de entrenamiento y da información acerca de por dónde y cómo va. Hay mucha salida, pero el tamaño queda limitado.\n",
+    "La ejecución tarda en completarse, puede llegar a una hora. Por ello, se han dejado los mensajes que Tensorflow y Keras imprimen por pantalla y se ha añadido uno, que sale en cada ronda de entrenamiento y da información acerca de por dónde y cómo va.\n",
     "\n",
     "Además, aquí se recogen las métricas que se usan para dibujar las gráficas, los métodos de entrenamiento y evaluación devuelven el tiempo que duró el entrenamiento y las métricas recogidas durante la evaluación."
    ]
